# Termi

./: CLAUDE.md  Cargo.toml  README.md  cli_args.txt
docs/: future_workflows.md
src/: cli.rs  error.rs  main.rs  vault.rs
src/auto_docs/: mod.rs  pipeline.rs
src/changelog/: mod.rs  pipeline.rs
src/commit_gen/: mod.rs  pipeline.rs
src/competitive/: mod.rs  pipeline.rs
src/dead_code/: mod.rs  pipeline.rs
src/dep_audit/: mod.rs  pipeline.rs
src/deploy_check/: mod.rs  pipeline.rs
src/error_detective/: mod.rs  pipeline.rs
src/explore/: mod.rs  pipeline.rs  prompts.rs  walker.rs
src/gen_tests/: mod.rs  pipeline.rs
src/lidarr/: mod.rs  pipeline.rs
src/log_anomaly/: mod.rs  pipeline.rs
src/mail/: imap.rs  mod.rs  pipeline.rs  store.rs
src/media/: mod.rs
src/migration/: mod.rs  pipeline.rs
src/ollama/: client.rs  mock.rs  mod.rs  real.rs  types.rs
src/onboard/: mod.rs  pipeline.rs
src/radarr/: mod.rs  pipeline.rs
src/refactor/: mod.rs  pipeline.rs
src/review/: mod.rs  pipeline.rs
src/searchtor/: mod.rs  pipeline.rs  prompts.rs
src/sonarr/: mod.rs  pipeline.rs
src/tech_radar/: mod.rs  pipeline.rs
src/tts/: mod.rs
src/tui/: markdown.rs  mod.rs
src/wizard/: mod.rs
src/workflow/: context.rs  events.rs  http.rs  mod.rs  output.rs  presets.rs  runner.rs  shell.rs  step.rs
src/workflows/: mod.rs
