[package]
name = "termi"
version = "0.1.0"
edition = "2021"
description = "Ollama API client and codebase explorer"

[[bin]]
name = "termi"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1",   features = ["full"] }
tokio-stream   = "0.1"
tokio-util     = { version = "0.7", features = ["codec", "io"] }
reqwest        = { version = "0.12", features = ["json", "stream"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
async-trait    = "0.1"
futures-util   = "0.3"
walkdir        = "2"
thiserror      = "1"
anyhow         = "1.0"
clap           = { version = "4",   features = ["derive", "env"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
