[package]
name = "termi"
version = "0.1.0"
edition = "2021"
description = "Ollama API client and codebase explorer"

[[bin]]
name = "termi"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1",   features = ["full"] }
tokio-stream   = "0.1"
tokio-util     = { version = "0.7", features = ["codec", "io"] }
reqwest        = { version = "0.12", features = ["json", "stream"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
async-trait    = "0.1"
futures-util   = "0.3"
walkdir        = "2"
thiserror      = "1"
anyhow         = "1.0"
clap           = { version = "4",   features = ["derive", "env"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ratatui        = { version = "0.29", features = ["crossterm"] }
crossterm      = "0.28"
htmd           = "0.2"
urlencoding    = "2.1"
chrono         = { version = "0.4" }
dialoguer      = "0.11"
playwright-rs  = { version = "0.12", optional = true }

[features]
js-render = ["dep:playwright-rs"]

[dev-dependencies]
tempfile = "3"
